tests/error/type_errors/unpack_too_many.err
Guppy compilation failed. Error in file $FILE:6

4:    @guppy(compile=True)
5:    def foo() -> int:
6:        a, b = 1, True, 3.0
          ^^^^^^^^^^^^^^^^^^^
GuppyTypeError: Too many values to unpack (expected 2, got 3)
